<resources>
    <string name="app_name">MyNotes</string>
    <string name="add_note">Ajouter une note</string>
    <string name="hint_nom">Nom (titre)</string>
    <string name="hint_desc">Description</string>
    <string name="hint_date">Date</string>
    <string name="save">Enregistrer</string>
    <string name="back">Retour</string>

    <string name="label_nom">Nom</string>
    <string name="label_desc">Description</string>
    <string name="label_date">Date</string>
    <string name="label_prio">Priorité</string>

    <string-array name="priorites">
        <item>Basse</item>
        <item>Moyenne</item>
        <item>Haute</item>
    </string-array>
</resources>
